--- a/.github/workflows/oras.yml
+++ b/.github/workflows/oras.yml
@@ -4,8 +4,14 @@ on:
   workflow_dispatch:
 
 jobs:
+
   build:
+
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
 
     steps:
 
